# Django--Shoe-Store-

./: .env  .env.example  .gitignore   db.sqlite3  pyproject.toml  requirements.txt
shoe_store/: settings.py
shoe_store_project/: .env.example  db.sqlite3
shoe_store_project/shoe_store/: settings.py  urls.py
shoe_store_project/shoestore/: __init__.py  admin.py  context_processors.py  models.py  urls.py  views.py
shoe_store_project/shoestore/management/commands/: populate_sample_data.py
shoe_store_project/shoestore/migrations/: 0001_initial.py  0002_product_image_url_alter_product_image.py
shoe_store_project/templates/: base.html  cart.html  home.html  product_detail.html  product_list.html
shoe_store_project/templates/registration/: login.html  profile.html  register.html
static/css/: cart.css  home.css  products.css  responsive.css  style.css  variables.css
store/: admin.py  cart.py  context_processors.py  forms.py  models.py  urls.py  views.py
templates/: base.html  cart.html  checkout.html  home.html  order_confirmation.html  product_detail.html  product_list.html
